--- a/src/app/compnents/plant-information-admin/plant-information-admin.component.html
+++ b/src/app/compnents/plant-information-admin/plant-information-admin.component.html
@@ -11,7 +11,7 @@
 
     <div class="plant-details">
         <h3>Détails</h3>
-        <p><strong>Prix :</strong> {{plant.price}} €</p>
+        <p><strong>Prix :</strong> {{plant.price}} $</p>
         <button class="save-btn" (click)="onHidePrix()">Modifier le prix</button>
         <div [hidden]="hidePrix">
             <input type="text" placeholder="Tapez le prix" class="modif-form" #prix>
