id plante ajoutée

--- a/src/app/compnents/add-plant/add-plant.component.html
+++ b/src/app/compnents/add-plant/add-plant.component.html
@@ -177,7 +177,7 @@
             </div>
             <!-- bouton pour ajouter la plante -->
             <div class="mb-3 d-flex justify-content-between gap-3 ">
-                <button type="submit" class="submit-btn" [disabled]="planteForm.invalid">Ajouter la plante</button>
+                <button type="submit" class="submit-btn" >Ajouter la plante</button>
             </div>
             <!-- message de succès -->
              <!-- message de succès -->
