--- a/src/app/compnents/navbar/navbar.component.html
+++ b/src/app/compnents/navbar/navbar.component.html
@@ -1,61 +1,68 @@
+<!-- ------------------------------ first navbar (logo et login) ------------------------------ -->
 <nav class="navbar">
   <div class="container-fluid custom-navbar">
     <a class="navbar-brand" routerLink="/home">
-      <img src="logo.png" alt="Bootstrap" >
+      <img src="logo.png" alt="Bootstrap">
     </a>
-
+    
     <div class="d-flex flex-column">
-
       <div class="d-flex align-items-center login-container">
         <a class="navbar-brand login-link" style="color: #1C593A;" routerLink="/login">Se Connecter
-        <i class="bi bi-person-fill-gear icon" style="font-size: 20px; margin-left: 5px; color: #1C593A;"></i></a>
+          <i class="bi bi-person-fill-gear icon" style="font-size: 20px; margin-left: 5px; color: #1C593A;"></i></a>
       </div>
-
-      <!-- <div class="d-flex search-container">
-        <input type="text" class="form-control search-input" style="color: #1C593A;" placeholder="Chercher une plante ...">
-        <button class="btn search-button">
-          <i class="bi bi-search"></i>
-        </button>
-      </div> -->
-
     </div>
   </div>
 </nav>
 
-<!---navbar2-->
+<!-- ------------------------------ second navbar (menu) ------------------------------ -->
 <nav class="navbar navbar-expand-lg m-2 nav2 sticky">
   <div class="container-fluid">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" 
-            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" style="color: #fffffe;">
+    <!-- ------------------------------ le bouton pour ouvrir le menu ------------------------------ -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+      aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" style="color: #fffffe;">
       <span class="navbar-toggler-icon text-white"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <!-- Left Aligned Navbar Links -->
+      <!-- ------------------------------ les liens du menu ------------------------------ -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <!------------ le lien pour aller à l'accueil --------------- -->
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" style="color: #fffffe;" routerLink="/home" routerLinkActive="active">Accueil</a>
+          <a class="nav-link active" aria-current="page" style="color: #fffffe;" routerLink="/home"
+            routerLinkActive="active">Accueil</a>
         </li>
-        
+
+        <!------------ le lien pour aller au catalogue des plantes --------------- -->
         <li class="nav-item">
-          <a class="nav-link" style="color: #fffffe;" routerLink="/listePlantes" routerLinkActive="active">Catalogue des Plantes</a>
+          <a class="nav-link" style="color: #fffffe;" routerLink="/listePlantes" routerLinkActive="active">
+            Catalogue des plantes
+          </a>
         </li>
+
+        <!------------ le lien pour aller à la page à propos --------------- -->
         <li class="nav-item">
-          <a class="nav-link" style="color: #fffffe;" routerLink="/aboutUs" routerLinkActive="active">A propos</a>
+          <a class="nav-link" style="color: #fffffe;" routerLink="/aboutUs" routerLinkActive="active">
+            A propos
+          </a>
         </li>
+
+        <!------------ le lien pour aller à la page de contact --------------- -->
         <li class="nav-item">
-          <a class="nav-link" style="color: #fffffe;" routerLink="/contactUs" routerLinkActive="active">Nous contacter</a>
+          <a class="nav-link" style="color: #fffffe;" routerLink="/contactUs" routerLinkActive="active">
+            Nous contacter
+          </a>
         </li>
       </ul>
 
-      <!-- Right Aligned List Group -->
+      <!-- ------------------------------ le bouton pour aller au panier ------------------------------ -->
       <button class="btn cart-button" (click)="goToPanier()">
         @if (tabcart.length > 0) {
-          <i class="bi bi-cart-check-fill"></i> {{tabcart.length}} article(s) - {{total | currency:'USD'}}
+        <i class="bi bi-cart-check-fill"></i> {{tabcart.length}} article(s) - {{total | currency:'USD'}}
         } @else {
-          <i class="bi bi-cart-check-fill"></i> 0 article(s) - 0.00 USD
+        <i class="bi bi-cart-check-fill"></i> 0 article(s) - 0.00 USD
         }
       </button>
+      <!-- ------------------------------ fin du bouton pour aller au panier ------------------------------ -->
     </div>
   </div>
 </nav>
