--- a/src/app/compnents/about-us/about-us.component.html
+++ b/src/app/compnents/about-us/about-us.component.html
@@ -20,14 +20,14 @@
         <div class="row align-items-center">
             <div class="col-lg-7 col-md-6 entreDuGauche">
                 <h2>Qui sommes nous</h2>
-                <p>
+                <p style="text-align: justify; font-size: 1.2rem;">
                     Nous sommes un <strong>site de vente en ligne</strong> dédié à la vente de plantes de qualité. Chez
                     PlantBuddy, nous croyons en la puissance des plantes pour améliorer nos espaces de vie et notre
                     bien-être. Notre équipe est passionnée par la nature et s'engage à fournir une expérience d'achat
                     exceptionnelle, en offrant une vaste sélection de plantes, ainsi que des conseils utiles pour les
                     entretenir.
                 </p>
-                <p>
+                <p style="text-align: justify; font-size: 1.2rem;">
                     Rejoignez notre communauté et découvrez comment chaque plante peut transformer votre espace en un
                     lieu plus vivant et accueillant.
                 </p>
