--- a/src/app/compnents/list-plants-admin/list-plants-admin.component.html
+++ b/src/app/compnents/list-plants-admin/list-plants-admin.component.html
@@ -47,15 +47,10 @@
 
             <!-- Search -->
             <div class="d-flex search-container">
-                <input type="text" 
-                    class="form-control search-input" 
-                    style="color: #1C593A;" 
-                    [(ngModel)]="searchTerm" 
-                     
-                    placeholder="Chercher une plante ..."
-                    aria-label="Chercher une plante ...">
+                <input type="text" class="form-control search-input" style="color: #1C593A;" [(ngModel)]="searchTerm"
+                    placeholder="Chercher une plante ..." aria-label="Chercher une plante ...">
                 <button class="btn search-button">
-                  <i class="bi bi-search"></i>
+                    <i class="bi bi-search"></i>
                 </button>
             </div>
         </div>
@@ -71,7 +66,7 @@
 <div id="plant-fleuries">
     <div class="pt-3 mb-1">
         <div class="section-title container">
-            <h4 class=" text-uppercase" >Plantes fleuries</h4>
+            <h4 class=" text-uppercase">Plantes fleuries</h4>
         </div>
 
         <div class="section-decriptipon d-flex flex-wrap justify-content-center p-3">
