--- a/src/app/compnents/panier/panier.component.html
+++ b/src/app/compnents/panier/panier.component.html
@@ -25,7 +25,7 @@
                     <i class="bi bi-trash3-fill"></i>
             </button>
         </div>
-        <!-- Modal -->
+        <!-- Modal pour supprimer un article -->
         <div class="modal fade" [id]="'exampleModal'+plant.id" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -56,7 +56,7 @@
                 title="Vider le panier">Tout effacer
         </button>
     </div>
-    <!-- Modal -->
+    <!-- Modal pour effacer le panier -->
     <div class="modal fade" [id]="'exampleModalClear'" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
