--- a/src/app/compnents/plant-item-admin/plant-item-admin.component.css
+++ b/src/app/compnents/plant-item-admin/plant-item-admin.component.css
@@ -78,7 +78,7 @@ button{
 .image:hover {
     filter: brightness(1.1) contrast(1.05);
 }
-.card:hover{
+/* .card:hover{
     box-shadow: 0 4px 8px 0 #1C593A;
     transform: scale(1.01);
-}
+} */
