--- a/src/app/compnents/plant-item-admin/plant-item-admin.component.html
+++ b/src/app/compnents/plant-item-admin/plant-item-admin.component.html
@@ -22,8 +22,32 @@
         <li class="list-group-item" style=" font-size: 17px; background-color: #bddac2; border-bottom: 1px solid #1C593A;"><span class="title">Fun_filter : </span> {{plant.fun_filter}}</li>
     </ul>
     <div class="card-body d-flex justify-content-between" style="background-color: #bddac2;">
-        <button class="btn" style="background-color: red; color: #fff;" title="delete" (click)="onDelete(plant.id)">Supprimer</button>
-        <a [routerLink]="['/plantAdmin', plant.id]"><button class="btn" style="background-color: #529F76; color: #fff;" title="View plant">Voir plus</button></a>
+        <button class="btn" 
+                style="background-color: red; color: #fff;" 
+                title="delete" 
+                data-bs-toggle="modal" 
+                [attr.data-bs-target]="'#exampleModal'+plant.id">Supprimer</button>
+        <a [routerLink]="['/plantAdmin', plant.id]">
+            <button class="btn" style="background-color: #529F76; color: #fff;" title="View plant">Voir plus</button>
+        </a>
+    </div>
+    <!-- Modal pour supprimer un article -->
+    <div class="modal fade" [id]="'exampleModal'+plant.id" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Suppression de {{plant.name}}</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Etes vous sure de vouloir supprimer <span class="text-danger">{{plant.name}}</span> du panier ?</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-danger" (click)="onDelete(plant.id)" data-bs-dismiss="modal">Supprimer</button>
+                </div>
+            </div>
         </div>
     </div>
+
 </div>
