--- a/src/app/compnents/plant-item/plant-item.component.css
+++ b/src/app/compnents/plant-item/plant-item.component.css
@@ -83,6 +83,9 @@ button{
 .image:hover {
     filter: brightness(1.1) contrast(1.05);
 }
+.card{
+    transition: all 0.3s ease;
+}
 .card:hover{
     box-shadow: 0 4px 8px 0 #1C593A;
     transform: scale(1.01);
