--- a/src/app/compnents/plant-item/plant-item.component.html
+++ b/src/app/compnents/plant-item/plant-item.component.html
@@ -21,8 +21,8 @@
 
             <h5 class="card-title title" style="color: #1C593A; font-size: 24px;">{{plant.name}}</h5>
             <div class="d-flex flex-column mb-2 align-items-end">
-                <span class="new-price">{{plant.price | currency:'USD'}}</span>
-                <small class="old-price">{{plant.price + 2 | currency:'USD'}}</small>
+                <span class="new-price">{{plant.price | number:'1.2-2' | currency:'USD'}}</span>
+                <small class="old-price">{{plant.price + 2 | number:'1.2-2' | currency:'USD'}}</small>
             </div>
             <p class="card-text" style=" font-size: 17px;"><span class="title">Description : </span>
                 {{plant.description}}.</p>
@@ -39,4 +39,23 @@
                     title="View plant">Voir plus</button></a>
         </div>
     </div>
+
+    <!-- Modal Bootstrap -->
+    <div class="modal fade" id="stockModal" tabindex="-1" aria-labelledby="stockModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="stockModalLabel">Stock Indisponible</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Nous sommes désolés, la plante n'est pas en stock.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+                </div>
+            </div>
+        </div>
+    </div>
+  
 </div>
