--- a/src/app/compnents/navbar-admin/navbar-admin.component.html
+++ b/src/app/compnents/navbar-admin/navbar-admin.component.html
@@ -10,14 +10,6 @@
           <a class="navbar-brand login-link" style="color: #1C593A;" routerLink="/home">Se Déonnecter
           <i class="bi bi-person-fill-gear icon" style="font-size: 20px; margin-left: 5px; color: #1C593A;"></i></a>
         </div>
-  
-        <div class="d-flex search-container">
-          <input type="text" class="form-control search-input" style="color: #1C593A;" [(ngModel)]="searchTerm" placeholder="Chercher une plante ...">
-          <button class="btn search-button">
-            <i class="bi bi-search"></i>
-          </button>
-        </div>
-  
       </div>
     </div>
   </nav>
@@ -52,4 +44,6 @@
       </div>
     </div>
   </nav>
-  
+
+  <router-outlet></router-outlet>
+  <app-footer></app-footer>
