--- a/src/app/compnents/navbar-admin/navbar-admin.component.html
+++ b/src/app/compnents/navbar-admin/navbar-admin.component.html
@@ -38,10 +38,10 @@
           </li>
           
         </ul>
-  
-        <!-- Right Aligned List Group -->
-       
       </div>
+      <button class="btn cart-button">
+        <i class="bi bi-person-lines-fill"></i> Profil admin
+      </button>
     </div>
   </nav>
 
