--- a/src/app/compnents/login/login.component.html
+++ b/src/app/compnents/login/login.component.html
@@ -45,12 +45,10 @@
                 }
             </div>
             <!-- submit -->
-            <button type="submit" class="submit-btn" [routerLink]="['/ListePlantesAdmin']"
-                [disabled]="loginForm.invalid">Se connecter <i class="bi bi-box-arrow-in-right"
+            <button type="submit" class="submit-btn" 
+                [disabled]="loginForm.invalid" >Se connecter <i class="bi bi-box-arrow-in-right"
                     style="margin-left: 10px;"></i></button>
-            <p class="mt-3">
-                <a href="#">Mot de passe oublié ?</a>
-            </p>
+            
         </form>
     </div>
 
