--- a/src/app/compnents/navbar-admin/navbar-admin.component.html
+++ b/src/app/compnents/navbar-admin/navbar-admin.component.html
@@ -7,7 +7,7 @@
       <div class="d-flex flex-column">
   
         <div class="d-flex align-items-center login-container">
-          <a class="navbar-brand login-link" style="color: #1C593A;" routerLink="/home">Se Déonnecter
+          <a class="navbar-brand login-link" style="color: #1C593A;" (click)="onDisconnect()">Se Déonnecter
           <i class="bi bi-person-fill-gear icon" style="font-size: 20px; margin-left: 5px; color: #1C593A;"></i></a>
         </div>
       </div>
@@ -39,7 +39,7 @@
           
         </ul>
       </div>
-      <button class="btn cart-button">
+      <button class="btn cart-button" routerLink="profilAdmin">
         <i class="bi bi-person-lines-fill"></i> Profil admin
       </button>
     </div>
