--- a/src/app/compnents/profil-admin/profil-admin.component.html
+++ b/src/app/compnents/profil-admin/profil-admin.component.html
@@ -1,25 +1,26 @@
 <div class="profile-container">
     <h1>Profil Administrateur</h1>
     <div class="profile-info">
-        <p><strong>Nom : </strong><span id="admin-name">Aymen Magri</span></p>
-        <p><strong>Mot de passe actuel : </strong><span id="admin-password">12345678</span></p>
+        <p><strong>Nom : </strong><span id="admin-name">{{admin.username}}</span></p>
+        <p><strong>Mot de passe actuel : </strong><span id="admin-password">{{admin.pwd}}</span></p>
     </div>
-    <button id="edit-password-btn">Modifier le mot de passe</button>
+    <button id="edit-password-btn" (click)="onModifier()">Modifier le mot de passe</button>
 
     <div id="password-form" class="">
-        <h2>Modifier le mot de passe</h2>
-        <form id="change-password-form">
+        
+        <form id="change-password-form" [formGroup]="profilForm" (ngSubmit)="onConfirmer()" [hidden]="hideForm">
+            <h2>Modifier le mot de passe</h2>
             <label for="current-password">Mot de passe actuel :</label>
-            <input type="password" id="current-password" required>
+            <input type="password" id="current-password" formControlName="mdpActuel">
 
             <label for="new-password">Nouveau mot de passe :</label>
-            <input type="password" id="new-password" required>
+            <input type="password" id="new-password" formControlName="mdpNew">
 
             <label for="confirm-password">Confirmer le mot de passe :</label>
-            <input type="password" id="confirm-password" required>
+            <input type="password" id="confirm-password" formControlName="mdpConfirm">
 
             <button type="submit">Confirmer</button>
-            <button type="button" id="cancel-btn">Annuler</button>
+            <button type="button" id="cancel-btn" (click)="onReset()">Annuler</button>
         </form>
     </div>
 </div>
