--- a/src/app/compnents/list-plants-admin/list-plants-admin.component.html
+++ b/src/app/compnents/list-plants-admin/list-plants-admin.component.html
@@ -1,7 +1,7 @@
 <div class="text-center welcome py-5 text-white">
     <div class="welcome-content">
         <h1 class="display-4 mb-5">Catalogue des Plantes</h1>
-        <div class="row justify-content-center gap-2">
+        <div class="row justify-content-center gap-2" style="width: 100%;">
 
             <!-- Fun Filter Selection -->
             <div class="col-md-3" style="width: 450px;">
