--- a/src/app/compnents/list-plants/list-plants.component.html
+++ b/src/app/compnents/list-plants/list-plants.component.html
@@ -13,7 +13,7 @@
     <div class="welcome-content">
         <h1 class="display-4 mb-5">Catalogue des Plantes</h1>
         <!-- ------------------------------ des Filtres pour les plantes ------------------------------ -->
-        <div class="row justify-content-center gap-2">
+        <div class="row justify-content-center gap-2" style="width: 100%;">
             <!-- Fun Filter Selection -->
             <div class="col-md-3" style="width: 450px;">
                 <div class="input-group mb-3">
