--- a/src/app/compnents/navbar/navbar.component.html
+++ b/src/app/compnents/navbar/navbar.component.html
@@ -52,6 +52,12 @@
             Nous contacter
           </a>
         </li>
+        <!------------ le lien pour aller à la page de new environnement --------------- -->
+        <li class="nav-item">
+          <a class="nav-link" style="color: #fffffe;" routerLink="/newEnvironnement" routerLinkActive="active">
+            Nouveau environnement
+          </a>
+        </li>
       </ul>
 
       <!-- ------------------------------ le bouton pour aller au panier ------------------------------ -->
