--- a/src/app/compnents/login/login.component.html
+++ b/src/app/compnents/login/login.component.html
@@ -45,11 +45,26 @@
                 }
             </div>
             <!-- submit -->
-            <button type="submit" class="submit-btn" 
-                [disabled]="loginForm.invalid" >Se connecter <i class="bi bi-box-arrow-in-right"
-                    style="margin-left: 10px;"></i></button>
-            
+            <button type="submit" class="submit-btn" [disabled]="loginForm.invalid">
+                Se connecter <i class="bi bi-box-arrow-in-right" style="margin-left: 10px;"></i>
+            </button>
         </form>
     </div>
-
+    <!-- Modal Bootstrap -->
+    <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="loginModalLabel">Nom d'utilisateur ou mot de passe incorrect</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Veuillez vérifier votre nom d'utilisateur et votre mot de passe.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
