--- a/src/app/compnents/navbar-admin/navbar-admin.component.html
+++ b/src/app/compnents/navbar-admin/navbar-admin.component.html
@@ -40,7 +40,7 @@
         </ul>
       </div>
       <button class="btn cart-button" routerLink="profilAdmin">
-        <i class="bi bi-person-lines-fill"></i> Profil admin
+        <i class="bi bi-person-lines-fill"></i> Profil <strong>{{admin.username}}</strong>
       </button>
     </div>
   </nav>
