--- a/src/app/compnents/profil-admin/profil-admin.component.html
+++ b/src/app/compnents/profil-admin/profil-admin.component.html
@@ -7,17 +7,44 @@
     <button id="edit-password-btn" (click)="onModifier()">Modifier le mot de passe</button>
 
     <div id="password-form" class="">
-        
+
         <form id="change-password-form" [formGroup]="profilForm" (ngSubmit)="onConfirmer()" [hidden]="hideForm">
             <h2>Modifier le mot de passe</h2>
             <label for="current-password">Mot de passe actuel :</label>
             <input type="password" id="current-password" formControlName="mdpActuel">
+            @if(mdp?.invalid && mdp?.touched){
+            <p class="pAlert">Veuillez remplir ce champ</p>
+            }
+            @if(mdp?.errors?.['minlength'] && mdp?.touched){
+            <p class="pAlert">Minimum 3 caractères</p>
+            }
+            @if(mdp?.errors?.['maxlength'] && mdp?.touched){
+            <p class="pAlert">Maximum 20 caractères</p>
+            }
 
             <label for="new-password">Nouveau mot de passe :</label>
             <input type="password" id="new-password" formControlName="mdpNew">
+            @if(newPwd?.invalid && newPwd?.touched){
+            <p class="pAlert">Veuillez remplir ce champ</p>
+            }
+            @if(newPwd?.errors?.['minlength'] && newPwd?.touched){
+            <p class="pAlert">Minimum 3 caractères</p>
+            }
+            @if(newPwd?.errors?.['maxlength'] && newPwd?.touched){
+            <p class="pAlert">Maximum 20 caractères</p>
+            }
 
             <label for="confirm-password">Confirmer le mot de passe :</label>
             <input type="password" id="confirm-password" formControlName="mdpConfirm">
+            @if(mdpconfirm?.invalid && mdpconfirm?.touched){
+            <p class="pAlert">Veuillez remplir ce champ</p>
+            }
+            @if(mdpconfirm?.errors?.['minlength'] && mdpconfirm?.touched){
+            <p class="pAlert">Minimum 3 caractères</p>
+            }
+            @if(mdpconfirm?.errors?.['maxlength'] && mdpconfirm?.touched){
+            <p class="pAlert">Maximum 20 caractères</p>
+            }   
 
             <button type="submit">Confirmer</button>
             <button type="button" id="cancel-btn" (click)="onReset()">Annuler</button>
